NCC/NCCjudge/judge/error/42/42_1.txt
/home/saurabh/CTD/NCC/judge/user/42/1/42_1.cpp:1:25: error: ‘WERR’ does not name a type
 /*Type your code here!*/WERR
                         ^
